--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Background Gradient Generator</title>
   </head>
   <body>
-    <h1>Background Gradient generator</h1>
+    <h1>Background Gradient Generator</h1>
 
     <section class="color-picker__section">
       <div class="info__container">
